# CG-LAB

./: CMakeLists.txt  README.md
src/advanced/Dexel/: CMakeLists.txt
src/advanced/Dexel/src/: CMakeLists.txt
src/advanced/Dexel/src/DexelMilling/: CMakeLists.txt  DexelMilling.cpp  DexelMilling.h
src/advanced/Dexel/src/UI/: ChartMRR.cpp  ChartMRR.h  GLWidget.cpp  GLWidget.h  ListViewCutter.cpp  ObjectMilling.cpp  Settings.cpp
src/advanced/Dexel/src/app/: CMakeLists.txt
src/advanced/Dexel/src/milling/: CMakeLists.txt  Cutter.h  CutterFactory.cpp  CutterFactory.h  CutterSweptVolume.cpp  CutterSweptVolume.h  GeometryMilling.cpp  GeometryMilling.h  NCProgram.cpp  NCProgram.h  Workpiece.cpp  Workpiece.h
src/advanced/Dexel/src/milling/Cutters/: CutterAPT.cpp  CutterAPT.h  CutterBallEndmill.cpp  CutterBallEndmill.h  CutterFilletEndmill.cpp  CutterFilletEndmill.h  CutterFilletTaperEndmill.cpp  CutterFilletTaperEndmill.h  CutterFlatEndmill.cpp  CutterFlatEndmill.h  CutterTaperEndmill.cpp  CutterTaperEndmill.h
src/advanced/Dexel/src/milling/NCProgramStates/: NCProgramStateG01.cpp  NCProgramStateG02.cpp  NCProgramStateG03.cpp
src/advanced/Dexel/src/render/: Render.cpp  RenderCWE.cpp  RenderCWE.h  shaders.qrc
src/advanced/Dexel/src/utils/: CMakeLists.txt  Filter.h  Vector3D.h  utils.h
src/advanced/Octree_sdf/src/: CMakeLists.txt
src/advanced/Octree_sdf/src/SDFOctree/: SDFOctant.h  SDFOctantLeaf.h  SDFOctantNode.h  SDFOctree.h
src/advanced/Octree_sdf/src/UI/: CMakeLists.txt  DialogSettings.h  (+6 more)
src/advanced/bumpLighting/: main.cpp
src/advanced/bumpLighting/dependencies/: shader.fs  shader.vs
src/advanced/bumpLighting/utils/: ourmodel.h
src/basic/1.0hello_window/: main.cpp
src/basic/1.1draw_triangle/: main.cpp
src/basic/1.2factory/: main.cpp
src/basic/1.2factory/utils/: TriangleModel.cpp  TriangleModel.h  windowFactory.cpp
src/basic/1.3draw_rectangle/: main.cpp
src/basic/1.3draw_rectangle/utils/: RectangleModel.cpp  RectangleModel.h
src/basic/1.4shader/: main.cpp
src/basic/1.4shader/dependencies/: shader.fs  shader.vs
src/basic/1.4shader/utils/: RectangleModel.cpp  RectangleModel.h
src/basic/1.5texture/: main.cpp
src/basic/1.5texture/dependencies/: shader.fs  shader.vs
src/basic/1.5texture/utils/: RectangleModel.cpp  RectangleModel.h
src/basic/1.6camera/: main.cpp
src/basic/1.6camera/dependencies/: shader.fs
src/basic/1.6camera/utils/: RectangleModel.cpp  RectangleModel.h
src/medium/2.1ambientLight/dependencies/: lightShader.fs  lightShader.vs  shader.fs  shader.vs
src/medium/2.1ambientLight/utils/: Cube.cpp  Cube.h
src/medium/2.2diffuseLight/: main.cpp
src/medium/2.2diffuseLight/dependencies/: shader.fs  shader.vs
src/medium/2.2diffuseLight/utils/: Cube.cpp  Cube.h
src/medium/2.3objLoader/: main.cpp
src/medium/2.3objLoader/dependencies/: shader.fs
src/medium/2.3objLoader/utils/: ourmodel.cpp  ourmodel.h
src/medium/2.4lightWithModel/: main.cpp
src/medium/2.4lightWithModel/utils/: ourmodel.cpp  ourmodel.h
src/medium/2.5gimbalLockCamera/dependencies/: shader.fs
src/medium/2.5gimbalLockCamera/utils/: ourmodel.cpp  ourmodel.h
src/medium/2.6quaternionCamera/dependencies/: shader.fs
src/medium/2.6quaternionCamera/utils/: ourmodel.cpp
src/medium/2.7bumpLighting/utils/: ourmodel.cpp  ourmodel.h
src/medium/2.7quaternionCamera/dependencies/: shader.fs
src/utils/: camera.h  mesh.h  model.cpp  model.h  objModel.cpp  objModel.h  ourcamera.h  quaternionCamera.h  shader.h  windowFactory.cpp  windowFactory.h
实验指导/advanced/: 2.7bumpLighting.md  bumpLighting.md  实体模型.md
实验指导/basic/: 1.1draw_triangle.md  1.2factory.md  1.5texture.md
实验指导/basic/1.0hello_window/: index.md
实验指导/basic/1.3draw_rectangle/: index.md
实验指导/basic/1.4shader/: index.md
实验指导/basic/1.6camera/: index.md
实验指导/medium/: 2.1ambientLight.md  2.4lightWithModel.md  2.5gimbalLockCamera.md  2.6quaternionCamera.md
实验指导/medium/2.2diffuseLight/: index.md
实验指导/medium/2.3objLoader/: index.md
实验指导/medium/2.6quaternionCamera/: index.md
实验指导/medium/2.7bumpLighting/: index.md
实验指导/环境配置/: environmentSetup.md  index.md  mingwInstallationGuide.md
(+83 files in other folders)
